# qjs-ffi

./: CMakeLists.txt  README.md  cfg.sh  ffi.c  test-portmidi.js  test.c  test.js  test2.js  util.mjs
cmake/: FindQuickJS.cmake  QuickJSModule.cmake
examples/: dnsresolve.js  fcntl.js  fd_set.js  portmidi.js  socket.js  telnet.js  term.js  timeval.js  zlib.js
lib/: fcntl.js  socket.js  socklen_t.js  term.js  timeval.js  zlib.js
